--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.11)
 
-add_subdirectory(library test)
+add_subdirectory(test)
+add_subdirectory(library)
 
 #CODECFORTR = UTF-8
 #CODECFORSRC = UTF-8
